# prima-undine

./: Cargo.toml  README.md
prima_undine/: Cargo.toml
prima_undine/src/: device.rs  device_impl.rs  devices.rs  functions.rs  graph.rs  initializer.rs  initializers.rs  lib.rs  macros.rs  memory_pool.rs  model.rs  operator.rs  operators.rs  optimizer.rs  optimizers.rs  parameter.rs  random.rs  shape.rs  shape_ops.rs  tensor.rs  test_utils.rs
prima_undine/src/devices/: naive.rs
prima_undine/src/devices/naive/: abs.rs  add.rs  add_assign.rs  argmax.rs  argmin.rs  argsort.rs  batch_concat.rs  batch_pick.rs  batch_slice.rs  batch_sum.rs  broadcast.rs  common.rs  concat.rs  cos.rs  div.rs  elu.rs  exp.rs  flip.rs  identity.rs  ln.rs  logsumexp.rs  matmul.rs  max.rs  min.rs  mul.rs  mul_assign.rs  neg.rs  permute_dims.rs  pick.rs  powf.rs  powi.rs  (+17 more)
prima_undine/src/functions/: arithmetic.rs  basic.rs
prima_undine/src/initializers/: constant.rs  normal.rs  uniform.rs  xavier_uniform.rs
prima_undine/src/operators/: abs.rs  add.rs  batch_concat.rs  batch_pick.rs  batch_slice.rs  batch_split.rs  batch_sum.rs  broadcast.rs  common.rs  concat.rs  cos.rs  div.rs  elu.rs  exp.rs  input.rs  ln.rs  logsumexp.rs  matmul.rs  max.rs  min.rs  mul.rs  neg.rs  parameter.rs  pick.rs  pow.rs  powf.rs  powi.rs  prelu.rs  reshape.rs  sigmoid.rs  sin.rs  slice.rs  softmax_cross_entropy.rs  softplus.rs  split.rs  sqrt.rs  sub.rs  sum.rs  tan.rs  tanh.rs  (+3 more)
prima_undine/src/optimizers/: adam.rs  momentum_sgd.rs  sgd.rs
prima_undine_derive/: Cargo.toml
prima_undine_derive/src/: lib.rs
(+12 files in other folders)
